--- a/HotS Database Viewer/Storyboards/Base.lproj/Main.storyboard
+++ b/HotS Database Viewer/Storyboards/Base.lproj/Main.storyboard
@@ -20,20 +20,20 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Loaded by HomeVC" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="I6O-Sf-Fo9" userLabel="Loaded by HomeVC">
-                                <rect key="frame" x="124" y="339" width="128" height="17"/>
+                                <rect key="frame" x="123.5" y="338.5" width="128" height="17"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" text="Home" textAlignment="center" lineBreakMode="tailTruncation" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="uzm-Eu-o2q" userLabel="Home">
-                                <rect key="frame" x="141" y="288" width="94" height="43"/>
+                                <rect key="frame" x="140.5" y="287.5" width="94" height="43"/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="36"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Heroes of the Storm Database Viewer" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YCn-Cv-8YS">
-                                <rect key="frame" x="16" y="20" width="343" height="165"/>
+                                <rect key="frame" x="16" y="20" width="342" height="165"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="165" id="jKE-Lx-XW7"/>
                                 </constraints>
@@ -63,20 +63,20 @@
         <!--Heroes-->
         <scene sceneID="hNz-n2-bh7">
             <objects>
-                <viewController id="9pv-A4-QxB" customClass="HeroesVC" customModule="HotS_Database_Viewer" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="9pv-A4-QxB" customClass="HeroData" customModule="HotS_Database_Viewer" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="tsR-hK-woN">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" text="Heroes" textAlignment="center" lineBreakMode="tailTruncation" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="KQZ-1w-vlD" userLabel="Heroes">
-                                <rect key="frame" x="132" y="287.5" width="110.5" height="43"/>
+                                <rect key="frame" x="132.5" y="287.5" width="110.5" height="43"/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="36"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Loaded by HeroesVC" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="A5M-7J-77L" userLabel="Loaded by HeroesVC">
-                                <rect key="frame" x="119" y="338.5" width="136" height="17"/>
+                                <rect key="frame" x="119.5" y="338.5" width="136" height="17"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
@@ -100,20 +100,20 @@
         <!--Talents-->
         <scene sceneID="wg7-f3-ORb">
             <objects>
-                <viewController id="8rJ-Kc-sve" customClass="TalentsVC" customModule="HotS_Database_Viewer" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="8rJ-Kc-sve" customClass="TalentData" customModule="HotS_Database_Viewer" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="QS5-Rx-YEW">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" text="Talents" textAlignment="center" lineBreakMode="tailTruncation" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="zEq-FU-wV5" userLabel="Talents">
-                                <rect key="frame" x="132.5" y="287.5" width="109.5" height="43"/>
+                                <rect key="frame" x="133" y="287.5" width="109.5" height="43"/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="36"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Loaded by TalentsVC" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NDk-cv-Gan" userLabel="Loaded by TalentsVC">
-                                <rect key="frame" x="119" y="338.5" width="135.5" height="17"/>
+                                <rect key="frame" x="119.5" y="338.5" width="135.5" height="17"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
@@ -134,43 +134,6 @@
             </objects>
             <point key="canvasLocation" x="-1" y="806"/>
         </scene>
-        <!--Maps-->
-        <scene sceneID="gFd-0c-12Z">
-            <objects>
-                <viewController id="X6M-1j-joe" userLabel="Maps" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="Tpq-dP-ur3">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" text="Maps" textAlignment="center" lineBreakMode="tailTruncation" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="A41-vs-lA9" userLabel="Maps">
-                                <rect key="frame" x="145" y="287.5" width="86" height="43"/>
-                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="36"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Loaded by MapsVC" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Cb3-rI-T2Y" userLabel="Loaded by MapsVC">
-                                <rect key="frame" x="125.5" y="338.5" width="125" height="17"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstItem="A41-vs-lA9" firstAttribute="centerY" secondItem="Tpq-dP-ur3" secondAttribute="centerY" id="BMm-cC-QWH"/>
-                            <constraint firstItem="Cb3-rI-T2Y" firstAttribute="top" secondItem="A41-vs-lA9" secondAttribute="bottom" constant="8" symbolic="YES" id="Ehv-Bf-Ydv"/>
-                            <constraint firstItem="A41-vs-lA9" firstAttribute="centerX" secondItem="Tpq-dP-ur3" secondAttribute="centerX" id="XYE-Un-IbR"/>
-                            <constraint firstItem="Cb3-rI-T2Y" firstAttribute="centerX" secondItem="A41-vs-lA9" secondAttribute="centerX" id="YMm-aY-jcY"/>
-                        </constraints>
-                        <viewLayoutGuide key="safeArea" id="se4-H8-917"/>
-                    </view>
-                    <tabBarItem key="tabBarItem" title="Maps" image="first" id="1L7-OC-tR8" userLabel="Maps"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="YrH-SS-DeX" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="674" y="806"/>
-        </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="yl2-sM-qoP">
             <objects>
@@ -185,7 +148,6 @@
                         <segue destination="gHW-gA-v7a" kind="relationship" relationship="viewControllers" id="kUC-U0-3WK"/>
                         <segue destination="9pv-A4-QxB" kind="relationship" relationship="viewControllers" id="u7Y-xg-7CH"/>
                         <segue destination="8rJ-Kc-sve" kind="relationship" relationship="viewControllers" id="lzU-1b-eKA"/>
-                        <segue destination="X6M-1j-joe" kind="relationship" relationship="viewControllers" id="lgV-wV-hgp"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HuB-VB-40B" sceneMemberID="firstResponder"/>
