--- a/HotS Database Viewer/Storyboards/Base.lproj/Main.storyboard
+++ b/HotS Database Viewer/Storyboards/Base.lproj/Main.storyboard
@@ -48,7 +48,7 @@
         <!--Heroes Table-->
         <scene sceneID="T4d-5i-7JD">
             <objects>
-                <tableViewController id="Zfv-f9-oec" userLabel="Heroes Table" customClass="ViewController" customModule="HotS_Database_Viewer" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController id="Zfv-f9-oec" userLabel="Heroes Table" customClass="HeroesVC" customModule="HotS_Database_Viewer" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="pZg-OO-fjf">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -61,12 +61,19 @@
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="119.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="lJY-yt-I5W">
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="lJY-yt-I5W" userLabel="Icon">
                                             <rect key="frame" x="15" y="11" width="64" height="64"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         </imageView>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Hero Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JZO-gJ-iyQ">
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JZO-gJ-iyQ">
                                             <rect key="frame" x="87" y="11" width="87" height="21"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Type Role" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eFv-eE-nih">
+                                            <rect key="frame" x="87" y="33" width="272" height="42"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                             <nil key="textColor"/>
@@ -83,16 +90,20 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" id="Zkm-OO-7lv">
-                        <barButtonItem key="leftBarButtonItem" title="Load" id="YYw-Wt-rzO">
+                        <barButtonItem key="leftBarButtonItem" title="Show me Heroes!" id="YYw-Wt-rzO">
                             <connections>
                                 <action selector="loadHeroesPressed:" destination="Zfv-f9-oec" id="5sj-D6-iiO"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <outlet property="heroTableView" destination="pZg-OO-fjf" id="Exm-Dl-sa6"/>
+                        <outlet property="tableView" destination="pZg-OO-fjf" id="Sf4-Cs-VNh"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iAM-J7-UOH" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="217" y="1639"/>
+            <point key="canvasLocation" x="216.80000000000001" y="1582.7586206896553"/>
         </scene>
         <!--Talents Table-->
         <scene sceneID="bM0-Og-M4C">
@@ -114,7 +125,7 @@
                                             <rect key="frame" x="15" y="11" width="64" height="64"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         </imageView>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Talent Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1Xe-sc-pMr">
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1Xe-sc-pMr">
                                             <rect key="frame" x="87" y="11" width="87" height="21"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -131,11 +142,11 @@
                             <outlet property="delegate" destination="Cx1-Bc-LNw" id="QAE-g2-EhD"/>
                         </connections>
                     </tableView>
-                    <tabBarItem key="tabBarItem" title="Talents" image="second" id="Shh-LP-KAO"/>
+                    <navigationItem key="navigationItem" id="OTM-5I-ScZ"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7JN-mo-UkO" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1108" y="828.93553223388312"/>
+            <point key="canvasLocation" x="1014" y="1582"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="yl2-sM-qoP">
@@ -150,17 +161,17 @@
                     <connections>
                         <segue destination="gHW-gA-v7a" kind="relationship" relationship="viewControllers" id="kUC-U0-3WK"/>
                         <segue destination="WWC-6v-2f4" kind="relationship" relationship="viewControllers" id="uDX-fl-6sJ"/>
-                        <segue destination="Cx1-Bc-LNw" kind="relationship" relationship="viewControllers" id="cD6-io-1CW"/>
+                        <segue destination="0f1-tc-tBa" kind="relationship" relationship="viewControllers" id="KIN-JJ-pmZ"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HuB-VB-40B" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="0.0" y="0.0"/>
         </scene>
-        <!--Heroes-->
+        <!--Heroes Navigation-->
         <scene sceneID="HsS-Sx-Uqh">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="WWC-6v-2f4" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="WWC-6v-2f4" userLabel="Heroes Navigation" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Heroes" image="first" id="p5l-Yt-qbd"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Xps-fn-dLB">
@@ -175,6 +186,23 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0Ek-CN-145" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="217" y="829"/>
+        </scene>
+        <!--Talents Navigation-->
+        <scene sceneID="mpO-Rg-tPa">
+            <objects>
+                <navigationController id="0f1-tc-tBa" userLabel="Talents Navigation" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Talents" image="second" id="RVW-e7-ERN" userLabel="Talents"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="O1p-CE-ylv">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="Cx1-Bc-LNw" kind="relationship" relationship="rootViewController" id="bwq-BD-qd1"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Tbr-qg-8ai" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1014" y="829"/>
         </scene>
     </scenes>
     <resources>
